kubernetes/apps/business/connelybrothers-origin/app/backendtrafficpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: connelybrothers-origin
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: connelybrothers-origin
  retry:
    numRetries: 0
  timeout:
    http:
      requestTimeout: 0s
