kubernetes/apps/business/connelybrothers-origin/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: connelybrothers-origin
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - ${CB_PROD_HOME_FQDN}
  rules:
    - backendRefs:
        - name: connelybrothers-origin
          port: 18091
